# graphql-api

./: .env.example  Cargo.toml  Makefile  README.md
migrations/2024-11-04-083658_accounts/: up.sql
src/: context.rs  db.rs  lib.rs  macros.rs  main.rs  schema.rs  schema_graphql.rs
src/handlers/: accounts.rs  graphql.rs  mod.rs
src/models/: accounts.rs  mod.rs
