[package]
name = "graphql"
version = "1.0.1"
authors = ["Andrie <andriebamz@gmail.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
graphql-parser = "0.4.1"
juniper = "0.16.1"
serde = "1.0.214"
serde_json = "1.0.132"
thiserror = "1.0.67"
